[project]
name = "python-wiki"
version = "0.1.0"
description = "The Python community wiki"
requires-python = ">=3.14"
license = "MIT"
dependencies = []

[dependency-groups]
docs = [
    "sphinx>=8.0",
    "shibuya",
    "myst-parser>=4.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-design>=0.6.0",
    "sphinx-autobuild>=2024.0.0",
    "linkify-it-py>=2.0",
]
convert = [
    "beautifulsoup4>=4.12",
]

[tool.uv]
default-groups = ["docs"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN", "PIE", "PT", "RSE", "RET", "SIM", "TID", "TCH", "ARG", "ERA", "PGH", "PL", "TRY", "FLY", "PERF", "RUF"]
ignore = ["S603", "S607", "T201"]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]
